--- a/feature_selection/02_RFE.ipynb
+++ b/feature_selection/02_RFE.ipynb
@@ -79,7 +79,7 @@
         "# **Nota**\n",
         "---\n",
         "\n",
-        "The interpretation and conclusions for each cell are presented immediately below it. ⚠️\n",
+        "The interpretation and conclusions for each cell are presented immediately below it. ⚠️\n"
       ],
       "metadata": {
         "id": "VDQOZdxipqcY"
